# MAST-TUI-Prototype

./: .gitignore  AGENTS.md  DESIGN.md  GEMINI.md  README.md  main.py  pyproject.toml
.agents/skills/blessed/: SKILL.md
.agents/skills/blessed/references/: colors.md  examples.md  input.md  location.md  terminal.md
.agents/skills/mast-queries/: SKILL.md
.agents/skills/tui-design/: SKILL.md
.specify/integrations/: gemini.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
specs/001-tui-framework-setup/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-tui-framework-setup/checklists/: requirements.md
specs/001-tui-framework-setup/contracts/: cli.md
specs/002-interactive-tui-controls/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-interactive-tui-controls/checklists/: requirements.md
specs/002-interactive-tui-controls/contracts/: cli.md
specs/003-mast-search-results/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-mast-search-results/checklists/: requirements.md
specs/003-mast-search-results/contracts/: cli.md
specs/004-advanced-search/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-advanced-search/checklists/: requirements.md
specs/004-advanced-search/contracts/: cli.md
src/mast_tui/: archive.py  main.py
src/mast_tui/ui/: form.py  layout.py  table.py
tests/integration/: test_cli.py  test_interactive.py  test_search.py
tests/unit/: test_archive.py  test_ui.py  test_ui_components.py
(+4 files in other folders)
