[project]
name = "mast-tui-prototype"
version = "0.1.0"
description = "MAST TUI Prototype"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "astropy>=7.2.0",
    "astroquery>=0.4.11",
    "blessed>=1.38.0",
    "pytest>=9.0.2",
    "ruff>=0.15.9",
]

[project.scripts]
mast-tui = "mast_tui.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []
